// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gux-pagination-item-counts #render should render as expected (1) 1`] = `
<gux-pagination-buttons current-page="0" layout="full" total-pages="0">
  <div class="gux-full gux-pagination-buttons-container">
    <div class="gux-pagination-buttons-group">
      <gux-button>
        <!---->
        <button class="gux-secondary" disabled="" title="First" type="button">
          <gux-icon decorative="" iconname="ic-arrow-left-dbl"></gux-icon>
        </button>
      </gux-button>
      <gux-button>
        <!---->
        <button class="gux-secondary" disabled="" title="Previous" type="button">
          <gux-icon decorative="" iconname="ic-chevron-small-left"></gux-icon>
        </button>
      </gux-button>
    </div>
    <div class="gux-pagination-buttons-input-container">
      <div>
        Page
      </div>
      <div class="gux-pagination-buttons-input">
        <gux-text-field use-clear-button="false" value="0">
          <div>
            <div class="gux-field">
              <input type="text" value="0">
            </div>
          </div>
        </gux-text-field>
      </div>
      <div>
        of 0
      </div>
    </div>
    <div class="gux-pagination-buttons-group">
      <gux-button>
        <!---->
        <button class="gux-secondary" disabled="" title="Next" type="button">
          <gux-icon decorative="" iconname="ic-chevron-small-right"></gux-icon>
        </button>
      </gux-button>
      <gux-button>
        <!---->
        <button class="gux-secondary" disabled="" title="Last" type="button">
          <gux-icon decorative="" iconname="ic-arrow-right-dbl"></gux-icon>
        </button>
      </gux-button>
    </div>
  </div>
</gux-pagination-buttons>
`;

exports[`gux-pagination-item-counts #render should render as expected (2) 1`] = `
<gux-pagination-buttons current-page="1" layout="full" total-pages="10">
  <div class="gux-full gux-pagination-buttons-container">
    <div class="gux-pagination-buttons-group">
      <gux-button>
        <!---->
        <button class="gux-secondary" disabled="" title="First" type="button">
          <gux-icon decorative="" iconname="ic-arrow-left-dbl"></gux-icon>
        </button>
      </gux-button>
      <gux-button>
        <!---->
        <button class="gux-secondary" disabled="" title="Previous" type="button">
          <gux-icon decorative="" iconname="ic-chevron-small-left"></gux-icon>
        </button>
      </gux-button>
    </div>
    <div class="gux-pagination-buttons-input-container">
      <div>
        Page
      </div>
      <div class="gux-pagination-buttons-input">
        <gux-text-field use-clear-button="false" value="1">
          <div>
            <div class="gux-field">
              <input type="text" value="1">
            </div>
          </div>
        </gux-text-field>
      </div>
      <div>
        of 10
      </div>
    </div>
    <div class="gux-pagination-buttons-group">
      <gux-button>
        <!---->
        <button class="gux-secondary" title="Next" type="button">
          <gux-icon decorative="" iconname="ic-chevron-small-right"></gux-icon>
        </button>
      </gux-button>
      <gux-button>
        <!---->
        <button class="gux-secondary" title="Last" type="button">
          <gux-icon decorative="" iconname="ic-arrow-right-dbl"></gux-icon>
        </button>
      </gux-button>
    </div>
  </div>
</gux-pagination-buttons>
`;

exports[`gux-pagination-item-counts #render should render as expected (3) 1`] = `
<gux-pagination-buttons current-page="5" layout="full" total-pages="10">
  <div class="gux-full gux-pagination-buttons-container">
    <div class="gux-pagination-buttons-group">
      <gux-button>
        <!---->
        <button class="gux-secondary" title="First" type="button">
          <gux-icon decorative="" iconname="ic-arrow-left-dbl"></gux-icon>
        </button>
      </gux-button>
      <gux-button>
        <!---->
        <button class="gux-secondary" title="Previous" type="button">
          <gux-icon decorative="" iconname="ic-chevron-small-left"></gux-icon>
        </button>
      </gux-button>
    </div>
    <div class="gux-pagination-buttons-input-container">
      <div>
        Page
      </div>
      <div class="gux-pagination-buttons-input">
        <gux-text-field use-clear-button="false" value="5">
          <div>
            <div class="gux-field">
              <input type="text" value="5">
            </div>
          </div>
        </gux-text-field>
      </div>
      <div>
        of 10
      </div>
    </div>
    <div class="gux-pagination-buttons-group">
      <gux-button>
        <!---->
        <button class="gux-secondary" title="Next" type="button">
          <gux-icon decorative="" iconname="ic-chevron-small-right"></gux-icon>
        </button>
      </gux-button>
      <gux-button>
        <!---->
        <button class="gux-secondary" title="Last" type="button">
          <gux-icon decorative="" iconname="ic-arrow-right-dbl"></gux-icon>
        </button>
      </gux-button>
    </div>
  </div>
</gux-pagination-buttons>
`;

exports[`gux-pagination-item-counts #render should render as expected (4) 1`] = `
<gux-pagination-buttons current-page="0" layout="small" total-pages="0">
  <div class="gux-pagination-buttons-container gux-small">
    <div class="gux-pagination-buttons-group">
      <gux-button>
        <!---->
        <button class="gux-secondary" disabled="" title="First" type="button">
          <gux-icon decorative="" iconname="ic-arrow-left-dbl"></gux-icon>
        </button>
      </gux-button>
      <gux-button>
        <!---->
        <button class="gux-secondary" disabled="" title="Previous" type="button">
          <gux-icon decorative="" iconname="ic-chevron-small-left"></gux-icon>
        </button>
      </gux-button>
    </div>
    <div class="gux-pagination-buttons-spacer"></div>
    <div class="gux-pagination-buttons-group">
      <gux-button>
        <!---->
        <button class="gux-secondary" disabled="" title="Next" type="button">
          <gux-icon decorative="" iconname="ic-chevron-small-right"></gux-icon>
        </button>
      </gux-button>
      <gux-button>
        <!---->
        <button class="gux-secondary" disabled="" title="Last" type="button">
          <gux-icon decorative="" iconname="ic-arrow-right-dbl"></gux-icon>
        </button>
      </gux-button>
    </div>
  </div>
</gux-pagination-buttons>
`;

exports[`gux-pagination-item-counts #render should render as expected (5) 1`] = `
<gux-pagination-buttons current-page="1" layout="small" total-pages="10">
  <div class="gux-pagination-buttons-container gux-small">
    <div class="gux-pagination-buttons-group">
      <gux-button>
        <!---->
        <button class="gux-secondary" disabled="" title="First" type="button">
          <gux-icon decorative="" iconname="ic-arrow-left-dbl"></gux-icon>
        </button>
      </gux-button>
      <gux-button>
        <!---->
        <button class="gux-secondary" disabled="" title="Previous" type="button">
          <gux-icon decorative="" iconname="ic-chevron-small-left"></gux-icon>
        </button>
      </gux-button>
    </div>
    <div class="gux-pagination-buttons-spacer"></div>
    <div class="gux-pagination-buttons-group">
      <gux-button>
        <!---->
        <button class="gux-secondary" title="Next" type="button">
          <gux-icon decorative="" iconname="ic-chevron-small-right"></gux-icon>
        </button>
      </gux-button>
      <gux-button>
        <!---->
        <button class="gux-secondary" title="Last" type="button">
          <gux-icon decorative="" iconname="ic-arrow-right-dbl"></gux-icon>
        </button>
      </gux-button>
    </div>
  </div>
</gux-pagination-buttons>
`;

exports[`gux-pagination-item-counts #render should render as expected (6) 1`] = `
<gux-pagination-buttons current-page="5" layout="small" total-pages="10">
  <div class="gux-pagination-buttons-container gux-small">
    <div class="gux-pagination-buttons-group">
      <gux-button>
        <!---->
        <button class="gux-secondary" title="First" type="button">
          <gux-icon decorative="" iconname="ic-arrow-left-dbl"></gux-icon>
        </button>
      </gux-button>
      <gux-button>
        <!---->
        <button class="gux-secondary" title="Previous" type="button">
          <gux-icon decorative="" iconname="ic-chevron-small-left"></gux-icon>
        </button>
      </gux-button>
    </div>
    <div class="gux-pagination-buttons-spacer"></div>
    <div class="gux-pagination-buttons-group">
      <gux-button>
        <!---->
        <button class="gux-secondary" title="Next" type="button">
          <gux-icon decorative="" iconname="ic-chevron-small-right"></gux-icon>
        </button>
      </gux-button>
      <gux-button>
        <!---->
        <button class="gux-secondary" title="Last" type="button">
          <gux-icon decorative="" iconname="ic-arrow-right-dbl"></gux-icon>
        </button>
      </gux-button>
    </div>
  </div>
</gux-pagination-buttons>
`;

exports[`gux-pagination-item-counts #render should render as expected (7) 1`] = `
<gux-pagination-buttons current-page="0" layout="expanded" total-pages="0">
  <div class="gux-expanded gux-pagination-buttons-container">
    <div class="gux-pagination-buttons-group">
      <gux-button>
        <!---->
        <button class="gux-secondary" disabled="" title="First" type="button">
          <gux-icon decorative="" iconname="ic-arrow-left-dbl"></gux-icon>
        </button>
      </gux-button>
      <gux-button>
        <!---->
        <button class="gux-secondary" disabled="" title="Previous" type="button">
          <gux-icon decorative="" iconname="ic-chevron-small-left"></gux-icon>
        </button>
      </gux-button>
    </div>
    <div class="gux-pagination-buttons-list-container"></div>
    <div class="gux-pagination-buttons-group">
      <gux-button>
        <!---->
        <button class="gux-secondary" disabled="" title="Next" type="button">
          <gux-icon decorative="" iconname="ic-chevron-small-right"></gux-icon>
        </button>
      </gux-button>
      <gux-button>
        <!---->
        <button class="gux-secondary" disabled="" title="Last" type="button">
          <gux-icon decorative="" iconname="ic-arrow-right-dbl"></gux-icon>
        </button>
      </gux-button>
    </div>
  </div>
</gux-pagination-buttons>
`;

exports[`gux-pagination-item-counts #render should render as expected (8) 1`] = `
<gux-pagination-buttons current-page="1" layout="expanded" total-pages="10">
  <div class="gux-expanded gux-pagination-buttons-container">
    <div class="gux-pagination-buttons-group">
      <gux-button>
        <!---->
        <button class="gux-secondary" disabled="" title="First" type="button">
          <gux-icon decorative="" iconname="ic-arrow-left-dbl"></gux-icon>
        </button>
      </gux-button>
      <gux-button>
        <!---->
        <button class="gux-secondary" disabled="" title="Previous" type="button">
          <gux-icon decorative="" iconname="ic-chevron-small-left"></gux-icon>
        </button>
      </gux-button>
    </div>
    <div class="gux-pagination-buttons-list-container">
      <button class="gux-pagination-buttons-list-current">
        1
      </button>
      <button class="gux-pagination-buttons-list-target">
        2
      </button>
      <button class="gux-pagination-buttons-list-target">
        3
      </button>
      <button class="gux-pagination-buttons-list-target">
        4
      </button>
      <button class="gux-pagination-buttons-list-target">
        5
      </button>
      <button class="gux-pagination-buttons-list-target">
        6
      </button>
      <button class="gux-pagination-buttons-list-target">
        7
      </button>
      <button class="gux-pagination-buttons-list-target">
        8
      </button>
      <button class="gux-pagination-buttons-list-target">
        9
      </button>
      <button class="gux-pagination-buttons-list-target">
        10
      </button>
    </div>
    <div class="gux-pagination-buttons-group">
      <gux-button>
        <!---->
        <button class="gux-secondary" title="Next" type="button">
          <gux-icon decorative="" iconname="ic-chevron-small-right"></gux-icon>
        </button>
      </gux-button>
      <gux-button>
        <!---->
        <button class="gux-secondary" title="Last" type="button">
          <gux-icon decorative="" iconname="ic-arrow-right-dbl"></gux-icon>
        </button>
      </gux-button>
    </div>
  </div>
</gux-pagination-buttons>
`;

exports[`gux-pagination-item-counts #render should render as expected (9) 1`] = `
<gux-pagination-buttons current-page="5" layout="expanded" total-pages="10">
  <div class="gux-expanded gux-pagination-buttons-container">
    <div class="gux-pagination-buttons-group">
      <gux-button>
        <!---->
        <button class="gux-secondary" title="First" type="button">
          <gux-icon decorative="" iconname="ic-arrow-left-dbl"></gux-icon>
        </button>
      </gux-button>
      <gux-button>
        <!---->
        <button class="gux-secondary" title="Previous" type="button">
          <gux-icon decorative="" iconname="ic-chevron-small-left"></gux-icon>
        </button>
      </gux-button>
    </div>
    <div class="gux-pagination-buttons-list-container">
      <button class="gux-pagination-buttons-list-target">
        1
      </button>
      <button class="gux-pagination-buttons-list-target">
        2
      </button>
      <button class="gux-pagination-buttons-list-target">
        3
      </button>
      <button class="gux-pagination-buttons-list-target">
        4
      </button>
      <button class="gux-pagination-buttons-list-current">
        5
      </button>
      <button class="gux-pagination-buttons-list-target">
        6
      </button>
      <button class="gux-pagination-buttons-list-target">
        7
      </button>
      <button class="gux-pagination-buttons-list-target">
        8
      </button>
      <button class="gux-pagination-buttons-list-target">
        9
      </button>
      <button class="gux-pagination-buttons-list-target">
        10
      </button>
    </div>
    <div class="gux-pagination-buttons-group">
      <gux-button>
        <!---->
        <button class="gux-secondary" title="Next" type="button">
          <gux-icon decorative="" iconname="ic-chevron-small-right"></gux-icon>
        </button>
      </gux-button>
      <gux-button>
        <!---->
        <button class="gux-secondary" title="Last" type="button">
          <gux-icon decorative="" iconname="ic-arrow-right-dbl"></gux-icon>
        </button>
      </gux-button>
    </div>
  </div>
</gux-pagination-buttons>
`;
